alterei a foto do site

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <section>
-            <img src="/imagens/image-omelette.jpeg" alt="foto">
+            <img src="imagens/image-omelette.jpeg" alt="foto">
             <h1>Simple image-omelette Recipe</h1>
             <aside id="sub-titulo">
                 An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.
